# agenticbrowser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api_server.py  browser_agent.py  docker-compose.yml  doctor.py  local_runner.py  pyproject.toml  requirements.txt  ruff.toml  skills.py  system_tools.py  task_planner.py
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
agenticbrowser/: __init__.py  agent.py  browser.py  cli.py  models.py
agenticbrowser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gui/: index.html
tests/: __init__.py  test_agent.py  test_api.py  test_api_coverage.py  test_api_extra.py  test_browser.py  test_browser_agent.py  test_browser_agent_unit.py  test_browser_thread_dispatch.py  test_c1_c2.py  test_c3.py  test_c4.py  test_c5.py  test_c6.py  test_c7.py  test_cli.py  test_default_session_thread_safety.py  test_doctor.py  test_gui.py  test_gui_auth_usability.py  test_local_runner.py  test_models.py  test_new_features.py  test_phase1_reliability.py  test_phase2_reliability.py  test_phase3_agentic.py  test_pool_and_ws_auth.py  test_skills.py  test_skills_extra.py  test_system_tools.py  test_task_planner.py  test_task_planner_execute.py  test_tier1.py
