[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticbrowser"
version = "0.1.0"
description = "An agentic browser tool for AI agents to control and interact with web browsers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["browser", "automation", "ai", "agent", "playwright", "web"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
]

[project.scripts]
agenticbrowser = "agenticbrowser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenticbrowser*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
