[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticbrowser"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "httpx>=0.24",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.24",
    "ruff>=0.1",
]

[project.scripts]
agenticbrowser = "local_runner:app"

[tool.setuptools]
py-modules = ["browser_agent", "system_tools", "task_planner", "local_runner", "api_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
